# blackbox

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  com.raggesilver.BlackBox.json  meson.build  uncrustify.cfg
build-aux/macos/: README.md  package.sh
build-aux/meson/: postinstall.py
data/: com.raggesilver.BlackBox.desktop.in  com.raggesilver.BlackBox.gschema.xml  com.raggesilver.BlackBox.metainfo.xml.in  meson.build
data/gtk-css-compat/styles/: gtk.css
data/icons/: meson.build
data/macos/: Info.plist.in  blackbox-launcher.c  make-icns.sh  meson.build
data/nautilus/: open-blackbox.py
data/schemes/: adwaita-dark.json  catppuccin-frappe.json  catppuccin-latte.json  catppuccin-macchiato.json  catppuccin-mocha.json
po/: LINGUAS  ar.po  blackbox.pot  bn.po  cs.po  de.po  es.po  fi.po  fr.po  id.po  it.po  ja.po  ka.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sq.po  sv.po  ta.po  tr.po  uk.po  ur.po  zh_CN.po
src/: Application.vala  CommandLine.vala  blackbox.gresource.xml  config.vala.in  main.vala  meson.build  style-dark.css  style.css
src/gtk/: header-bar.ui  help-overlay.ui  preferences-window.ui  terminal-menu.ui  window.ui
src/services/: ProcessWatcher.vala  Settings.vala  Shortcuts.vala
src/utils/: Constants.vala  File.vala  Terminal.vala  meson.build  terminal.c  terminal.h  terminal.vapi
src/vapi/: librsvg-2.0.vapi
src/widgets/: AboutDialog.vala  HeaderBar.vala  PreferencesWindow.vala  ShortcutDialog.vala  ShortcutEditor.vala  Terminal.vala  TerminalTab.vala  Window.vala
